libs/toolkit-macros-tests/tests/ui/fail/lifecycle_await_ready_wrong_type.rs
use toolkit_macros::gear;

#[gear(name="x", capabilities=[stateful], lifecycle(entry="serve", await_ready="true"))]
pub struct X;

fn main() {}
